:tada: initital commit

--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "packageManager": "pnpm@8.15.6",
   "engines": {
     "node": ">=18"
+  },
+  "dependencies": {
+    "framer-motion": "^11.3.8",
+    "web": "^0.0.2"
   }
 }
