--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -35,6 +35,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.3.8",
     "lucide-react": "^0.412.0",
     "react": "^18.2.0",
     "tailwind-merge": "^2.4.0",
