--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -9,7 +9,6 @@
     "paths": {
       "~/*": ["./*"]
     }
-    
   },
   "include": [
     "next-env.d.ts",
@@ -18,7 +17,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "tailwind.config.js"    
+    "tailwind.config.js",
+    "../../packages/ui/src/components/ui/site-header.tsx"
   ],
   "exclude": ["node_modules"]
 }
