--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "node": ">=18"
   },
   "dependencies": {
-    "framer-motion": "^11.3.8",
-    "web": "^0.0.2"
+    "framer-motion": "^11.3.8"
+
   }
 }
