:construction: added a input box

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -18,7 +18,7 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "tailwind.config.js",
-    "../../packages/ui/src/components/ui/site-header.tsx"
+    "../../packages/ui/src/components/**/*"
   ],
   "exclude": ["node_modules"]
 }
