--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -14,6 +14,7 @@
       "@pc/ui/*": ["./src/*"]
     }
   },
-  "include": [".", "src/**/*"],
+  "include": ["src"],
+  
   "exclude": ["node_modules", "dist"]
 }
