--- a/packages/ui/tsconfig.lint.json
+++ b/packages/ui/tsconfig.lint.json
@@ -3,6 +3,6 @@
   "compilerOptions": {
     "outDir": "dist"
   },
-  "include": ["src", "turbo",  "tailwind.config.js"],
+  "include": ["src", "turbo",  "tailwind.config.ts", "tsup.config.ts"],
   "exclude": ["node_modules", "dist", "postcss.config.js"]
 }
