--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,18 +1,27 @@
 {
   "name": "@pc/ui",
   "version": "0.0.0",
-  "private": true,
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "exports": {
-    "./globals.css": "./src/globals.css",
-    "./postcss.config": "./postcss.config.mjs",
-    "./tailwind.config": "./tailwind.config.js",
-    "./lib/*": "./src/lib/*.ts",
-    "./components/*": "./src/components/*.tsx"
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./global.css": "./dist/global.css",
+    "./package.json": "./package.json"
   },
+  "private": true,
+  "files": [
+    "dist/**"
+  ],
   "scripts": {
-    "dev": "tsc --watch",
+    "dev": "tsup --watch",
     "lint": "eslint . --max-warnings 0",
-    "generate:component": "turbo gen react-component"
+    "generate:component": "turbo gen react-component",
+    "build": "tsup"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
@@ -26,7 +35,8 @@
     "eslint": "^8.57.0",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.6",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "@pc/tailwind-config": "workspace:*"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
@@ -41,6 +51,7 @@
     "lucide-react": "^0.412.0",
     "react": "^18.2.0",
     "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tsup": "^6.7.0"
   }
 }
