--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,20 +1,5 @@
 {
   "extends": "@repo/typescript-config/react-library.json",
-  "compilerOptions": {
-    "outDir": "dist",
-    "rootDir": ".",
-    "target": "es5",
-    "module": "NodeNext",
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "baseUrl": "./",
-    "paths": {
-      "@pc/ui/*": ["./src/*"]
-    }
-  },
-  "include": ["src"],
-  
-  "exclude": ["node_modules", "dist"]
+  "include": ["."],
+  "exclude": ["dist", "build", "node_modules"]
 }
