--- a/packages/tailwind-config/package.json
+++ b/packages/tailwind-config/package.json
@@ -1,18 +1,18 @@
 {
-    "name": "@pc/tailwind-config",
-    "description": "Tailwindcss config for Dub.co",
-    "version": "0.0.5",
-    "main": "index.ts",
-    "types": "index.ts",
-    "devDependencies": {
-      "tailwindcss": "^3.4.4"
-    },
-    "dependencies": {
-      "@tailwindcss/forms": "^0.5.6",
-      "@tailwindcss/typography": "^0.5.9",
-      "tailwind-scrollbar-hide": "^1.1.7",
-      "tailwindcss-radix": "^2.8.0"
-    }
-
+  "name": "@pc/tailwind-config",
+  "description": "Tailwindcss config for Dub.co",
+  "version": "0.0.5",
+  "main": "index.ts",
+  "types": "index.ts",
+  "devDependencies": {
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.6"
+  },
+  "dependencies": {
+    "@tailwindcss/forms": "^0.5.6",
+    "@tailwindcss/typography": "^0.5.9",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "tailwindcss-radix": "^2.8.0"
   }
-  
+}
