--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,31 +1,37 @@
 {
-  "name": "web",
+  "name": "@pc/web",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev --port 3000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@pretty-count": "workspace:*",
+    "@mdx-js/loader": "^3.0.0",
+    "@mdx-js/react": "^3.0.0",
+    "@next/mdx": "^14.1.0",
+    "@pc/tailwind-config": "workspace:*",
     "@pc/ui": "workspace:*",
-    "@react-spring/web": "^9.7.4",
-    "next": "15.0.0-rc.0",
-    "react": "19.0.0-rc-f994737d14-20240522",
-    "react-dom": "19.0.0-rc-f994737d14-20240522"
+    "@pretty-count": "workspace:*",
+    "codehike": "^1.0.0",
+    "lucide-react": "^0.412.0",
+    "next": "14.1.0",
+    "react": "^18",
+    "react-dom": "^18",
+    "zod": "^3.23.4"
   },
   "devDependencies": {
-    "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/mdx": "^2.0.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.0-rc.0",
-    "postcss": "^8.4.39",
-    "tailwindcss": "^3.4.6"
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5"
   }
 }
