--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -6,19 +6,16 @@
         "name": "next"
       }
     ],
-    "paths": {
-      "~/*": ["./*"]
-    }
+    "allowImportingTsExtensions": true,
+    "noEmit": true,
+    "emitDeclarationOnly": true
   },
   "include": [
     "next-env.d.ts",
     "next.config.mjs",
-    "postcss.config.mjs",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts",
-    "tailwind.config.js",
-    "../../packages/ui/src/components/**/*"
-  ],
+    ".next/types/**/*.ts"
+, "app/page.mdx"  ],
   "exclude": ["node_modules"]
 }
