--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -16,6 +16,6 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-, "app/page.mdx"  ],
+, "app/page.tsx"  ],
   "exclude": ["node_modules"]
 }
