--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,7 +14,7 @@
     "@next/mdx": "^14.1.0",
     "@pc/tailwind-config": "workspace:*",
     "@pc/ui": "workspace:*",
-    "@pretty-count": "workspace:*",
+    "pretty-count": "workspace:*",
     "codehike": "^1.0.0",
     "lucide-react": "^0.412.0",
     "next": "14.1.0",
